--- a/data/knowledge_apcs_python.json
+++ b/data/knowledge_apcs_python.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "title": "APCS Python 知識庫",
+    "title": "APCS Python 知識庫 motified by Victor",
     "version": "2.0.0",
     "updated_at": "2026-02-06"
   },
